--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,8 @@ jobs:
         - ng lint
     - stage: deploy
       script:
-        - cd functions && yarn
+        - yarn
+        - yarn install:functions
         - yarn build
         - cd functions && yarn firebase deploy --token $FIREBASE_TOKEN --non-interactive
 
