--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "build": "yarn build:browser && yarn build:server",
+    "install:functions": "cd functions yarn",
+    "build": "yarn build:browser && yarn build:server && build:functions",
     "build:browser": "rm -rf functions/dist && ng build --prod && yarn mv:index.html",
     "build:server": "ng build -aot -app angular-firebase",
+    "build:serve": "ng build && yarn serve:universal",
+    "build:functions": "cd functions && yarn build",
     "serve:universal": "cd functions && yarn serve",
     "mv:index.html": "mkdir functions/dist && mv dist/index.html functions/dist/"
   },
