--- a/functions/package.json
+++ b/functions/package.json
@@ -3,9 +3,9 @@
   "scripts": {
     "lint": "./node_modules/.bin/tslint -p tslint.json",
     "build": "./node_modules/.bin/tsc",
-    "serve": "npm run build && firebase serve --only functions",
-    "shell": "npm run build && firebase experimental:functions:shell",
-    "start": "npm run shell",
+    "serve": "yarn build && yarn firebase serve --only hosting,functions",
+    "shell": "yarn build && yarn firebase experimental:functions:shell",
+    "start": "yarn shell",
     "deploy": "firebase deploy --only functions",
     "logs": "firebase functions:log"
   },
